style/style.css
* {
  font-family: 'Poppins', sans-serif;

}


:root {
  --bg-yellow: #FFBF00;
  --bg-blue: #142BA4;
}

#particles-js {
  position: absolute;
  width: 100%;
  height: 50%;
  background-color: var(--bg-blue);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: auto;
  text-align: center;
}

#profilePic {
  width: 250px;
  height: 250px;
  display: flex;
  justify-content: center;
  margin: auto;
  margin-top: 20px;
}


#techstack {
  width: 60%;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: 100px 100px;
  gap: 10px;
  align-content: center;
  justify-content: center;
  margin: auto;
  text-align: center;
}

#skillcard {
  margin: auto;
  width: 100px;
  height: 100px;
  border-radius: 8px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
}



#description {
  width: 70%;
  margin: auto;
  margin-top: 80px;
}

#description>h3 {
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
}

#stackImg {
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  width: 85px;
  height: 85px;
  border-radius: 8px;
  margin: auto;
}

#stackImg>img {
  width: 50px;
  height: 50px;
  display: block;
  margin: auto;
}

#stackImg>p {
  font-size: 0.8rem;
}

h3 {
  text-decoration: underline;
  text-decoration-color: var(--bg-yellow);
  text-decoration-thickness: 4px;
}

.card-group {
  gap: 20px;
  margin-top: 20px;
}


@media all and (min-width: 768px) and (max-width: 1024px) {

  #techstack {
    width: 60%;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 100px 100px;
    gap: 10px;
    align-content: center;
    justify-content: center;
    margin: auto;
    text-align: center;
  }
}

/* small screens */
@media (max-width: 767px) {
  #profilePic {
    width: 175px;
    height: 175px;
    margin: auto;
  }

  #description>h5{
    font-size: 16px;
  }
  #techstack {
    width: 60%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 80px 80px;
    gap: 20px;
    align-content: center;
    justify-content: center;
    margin: auto;
    text-align: center;
  }

  .Statistics {
    display: flex;
    flex-direction: column;
    gap:10px;
  }

  .stats {
    width: 80px;
    height: 80px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .stats>h4 {
    font-size: 10px;
  }

  .stats>p {
    font-size: 8px;
  }

}


footer {
  display: flex;
  background-color: var(--bg-blue);
  width: 100%;
  bottom: 0;
  margin-bottom: 0%;
  height: 40px;
  justify-content: center;
  text-align: center;
  color: white;
  margin-top: 25px;
}

footer>p {
  padding: 10px;
  margin: 0%;
}

#contact {
  width: 100%;
  margin: auto;
  justify-content: center;

}

table {
  text-align: left;
}

.Statistics {
  display: flex;
  justify-content: content;
  align-items: center;
}

.stats {
  width: 150px;
  display: flex;
  flex-direction: column;
  padding: 5px;
  margin: auto;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  border-radius: 10px;
  align-items: center;
}

.stats>h4 {
  font-size: 18px;
  font-weight: bold;
  color: var(--bg-blue);
}

.stats>p {
  font-size: 14px;
}

.card:hover, #stackImg:hover, .stats:hover {
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.stats:hover, #stackImg:hover {
  background-color: var(--bg-yellow);
}

